// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TargetItem /> should render when [canModify=false] 1`] = `
<Box__BoxGroupSection>
  <Item__TargetItemHeader>
    foo
  </Item__TargetItemHeader>
  <Item__TargetItemDescription
    description="bar"
  >
    bar
  </Item__TargetItemDescription>
</Box__BoxGroupSection>
`;

exports[`<TargetItem /> should render when [canModify=true] 1`] = `
<Box__BoxGroupSection>
  <Item__TargetItemHeader>
    foo
    <span>
      <Icon
        bsStyle="warning"
        faStyle="fas"
        fixedWidth={false}
        name="edit"
        onClick={[Function]}
        pullRight={false}
        tip="Modify"
      />
      <Icon
        bsStyle="danger"
        faStyle="fas"
        fixedWidth={false}
        name="trash"
        onClick={[Function]}
        pullRight={false}
        tip="Remove"
      />
    </span>
  </Item__TargetItemHeader>
  <Item__TargetItemDescription
    description="bar"
  >
    bar
  </Item__TargetItemDescription>
</Box__BoxGroupSection>
`;

exports[`<TargetItem /> should render with no description 1`] = `
<Box__BoxGroupSection>
  <Item__TargetItemHeader>
    foo
    <span>
      <Icon
        bsStyle="warning"
        faStyle="fas"
        fixedWidth={false}
        name="edit"
        onClick={[Function]}
        pullRight={false}
        tip="Modify"
      />
      <Icon
        bsStyle="danger"
        faStyle="fas"
        fixedWidth={false}
        name="trash"
        onClick={[Function]}
        pullRight={false}
        tip="Remove"
      />
    </span>
  </Item__TargetItemHeader>
  <Item__TargetItemDescription
    description=""
  >
    No description
  </Item__TargetItemDescription>
</Box__BoxGroupSection>
`;
